# cmake-template

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  check_formatting
.githooks/: pre-commit
cmake/: hello_config.cmake.in
include/: hello.hpp  hello_version.hpp.in
src/: CMakeLists.txt  hello.cpp
unit_tests/: CMakeLists.txt  test_hello.cpp
unit_tests/include/: test_hello.hpp
user_guide/: .clang-tidy  CMakeLists.txt  references.bib  user_guide.tex
